--- a/scss/components/_rating.scss
+++ b/scss/components/_rating.scss
@@ -5,6 +5,8 @@
     margin-bottom: 1rem;
     padding: 1em 3em;
     border-radius: 0.5em;
+    text-align: center;
+
 
     &__text {
         font-weight: 700;
