--- a/scss/components/_testimonial.scss
+++ b/scss/components/_testimonial.scss
@@ -9,6 +9,7 @@
     line-height: 1.5;
     font-weight: 500;
     margin-bottom: 1rem;
+    max-width: 350px;
 
     &__header {
         display: flex;
